feat: made some chnages
